  removed. Nodes will recover their unassigned local primary shards
  immediatelly after restart.

- The `_node` column on `sys.shards` and `sys.operations` has been renamed to
  `node`, is now visible by default and has been trimmed to only include
  `node['id']` and `node['name']`. In order to get all information a join query
  can be used with `sys.nodes`.

Changes
=======

- Implemented the ``Block Hash Join`` algorithm which is now used for
  ``Equi-Joins``.

- Added new `sys.health` system information table to expose the health of all
  tables and table partitions.

- The first argument (``field``) of the ``EXTRACT`` function has been limited
  to string literals and identifiers, as it was documented.

- Added note about the newly available `JMX HTTP Exporter` to the monitoring
  documentation section.

- Enable logging of JVM garbage collection times that help to debug memory
  pressure and garbage collection issues. GC log files are stored separately to
  the standard CrateDB logs and the files are log-rotated.

- CrateDB will now by default create a heap dump in case of a crash caused by
  an out of memory error. This makes it necessary to account for the additional
  disk space requirements.

- Added 'epoch' argument to the extract function which returns the number of
  seconds since Jan 1, 1970. For example:
  ``extract(epoch from '1970-01-01T00:00:01')`` returns ``1.0`` seconds.

- Add max_token_length parameter to whitespace tokenizer.

- Statistics for jobs and operations are enabled by default. If you don't need
  any statistics, please set ``stats.enabled`` to ``false``.

- ``ALTER TABLE <name> OPEN`` will now wait for all shards to become active
  before returning to be consistent with the behaviour of other statements.

- CrateDB is now based on Elasticsearch 6.1.3 and Lucene 7.1.0.

- Added a new ``bengali`` language analyzer and a ``bengali_normalization``
  token filter.
