@@ -405,6 +405,7 @@ type, name and which table they are defined in.
     +--------------------+------------+-...------------------+-------------+
     SELECT 3 rows in set (... sec)
 
+
 ``key_column_usage``
 --------------------
 
@@ -428,6 +429,28 @@ tables:
     | students_pk     | students   | department  |                2 |
     +-----------------+------------+-------------+------------------+
     SELECT 2 rows in set (... sec)
+
+.. rubric:: Schema
+
++-------------------------+-------------------------------------------------------------------------+-------------+
+| Name                    | Description                                                             | Data Type   |
++=========================+=========================================================================+=============+
+| ``constraint_catalog``  | Refers to ``table_catalog``                                             | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``constraint_schema``   | Refers to ``table_schema``                                              | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``constraint_name``     | Name of the constraint                                                  | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``table_catalog``       | Refers to ``table_schema``                                              | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``table_schema``        | Name of the schema that contains the table that contains the constraint | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``table_name``          | Name of the table that contains the constraint                          | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``column_name``         | Name of the column that contains the constraint                         | ``String``  |
++-------------------------+-------------------------------------------------------------------------+-------------+
+| ``ordinal_position``    | Position of the column within the contraint (starts with 1)             | ``Integer`` |
++-------------------------+-------------------------------------------------------------------------+-------------+
 
 .. _is_table_partitions:
 
